--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -33,7 +33,7 @@ jobs:
         id: generate-snake
         uses: ./
         with:
-          github_user_name: IhfazAlam
+          github_user_name: platane
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
@@ -73,7 +73,7 @@ jobs:
         id: generate-snake
         uses: ./svg-only
         with:
-          github_user_name: ihfaz
+          github_user_name: platane
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
