--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,21 +1,24 @@
-name: Generate Snake
+name: Test Snake Generation
 
 on:
   schedule:
-    - cron: "0 */6 * * *"
-  workflow_dispatch:
+    - cron: "0 */6 * * *" # Runs every 6 hours
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout code
       - uses: actions/checkout@v3
 
+      # Step 2: Generate the snake contribution graph
       - uses: Platane/snk@v2
         with:
           github_user_name: IhfazAlam
 
+      # Step 3: Commit and push changes to 'output' branch
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
@@ -23,6 +26,7 @@ jobs:
           branch: output
           file_pattern: dist/*
 
+      # Step 4: Deploy to GitHub Pages
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
